syntax = "proto3";

import "WorkingMode.proto";
import "DarkMode.proto";
import "repository/RepositoryMenu.proto";
import "modules/ModulesMenu.proto";

option java_package = "com.dergoogler.mmrl.datastore";
option java_multiple_files = true;

message UserPreferences {
  WorkingMode workingMode = 1;
  DarkMode darkMode = 2;
  int32 themeColor = 3;
  bool deleteZipFile = 4;
  RepositoryMenu repositoryMenu = 5;
  ModulesMenu modulesMenu = 6;
  bool useDoh = 7;
  string downloadPath = 8;
  bool confirmReboot = 9;
  bool terminalTextWrap = 10;
  string datePattern = 11;
  bool autoUpdateRepos = 12;
  int32 autoUpdateReposInterval = 13;
  bool checkModuleUpdates = 14;
  int32 checkModuleUpdatesInterval = 15;
  string homepage = 16;
  bool checkAppUpdates = 17;
}
