syntax = "proto3";

import "repository/RepositoryMenu.proto";

option java_package = "com.dergoogler.mmrl.datastore.repositories";
option java_multiple_files = true;

message RepositoriesMenu {
  Option option = 1;
  bool descending = 2;
  bool showModulesCount = 3;
  bool showUpdatedTime = 4;
  bool showCover = 5;
}